[package]
name = "opencv-to-image"
version = "0.1.0"
edition = "2024"

[dependencies]
opencv_94 = { package = "opencv", version = "0.94", optional = true }
opencv_93 = { package = "opencv", version = "0.93", optional = true }
image = { version = "0.25.6", default-features = false }
bytemuck = "1.23.0"
thiserror = "2.0.12"
static_assertions = "1.1.0"

[features]
macro = []
opencv-94 = ["opencv_94", "macro"]
opencv-93 = ["opencv_93", "macro"]

default = ["opencv-94"]

[build-dependencies]
cargo_toml = "0.22"
